# soccer_outcome_prediction_system

./: .gitignore  README.md  feature_engineering_orchestrator.py  preprocessing_orchestrator.py  pyproject.toml
scripts/: README.md  create_datasets.py  extract_and_create_datasets.py  extract_features.py  hyper_parameter_tuning.py  list_teams.py  make_predictions.py  predict.py  predict_match.py  process_complete_dataset.py  run_full_pipeline.py  test_pipeline.py  train_models.py  train_transformer_models.py
src/ai_models/: __init__.py  base_model.py  enhanced_transformer.py  model_wrapper.py  tab_transformer.py  unified_predictor.py
src/config/: __init__.py  logger.py  logging_config.py  scraping_config.py
src/data_processing/: __init__.py
src/data_processing/extractors/: __init__.py  json_extractor.py  match_extractor.py
src/data_processing/pipelines/: __init__.py  extraction_pipeline.py
src/data_processing/transformers/: __init__.py  stat_normalizer.py  team_standardizer.py
src/data_processing/validators/: __init__.py  consistency_checker.py  schema_validator.py
src/feature_engineering/: __init__.py
src/feature_engineering/extractors/: __init__.py  advanced_metrics.py  match_context_features.py  (+2 more)
src/features/: config.py  elo_ratings.py  feature_engineering.py  stats_aggregator.py  team_features.py  temporal_features.py
src/ml/: __init__.py
src/scraping/: driver.py  exceptions.py  orchestrator.py  test_match.py  test_odds.py  test_stats.py
utils/testing/: simple_test_models.py  test_ml_models.py
utils/training/: train_ensemble.py
(+31 files in other folders)
