[tool.poetry]
name = "soccer-outcome-prediction-system"
version = "0.1.0"
description = "This is a project focused on doing data driving predictions about soccer outcomes. The project includes web scraping, machine/deep learning and a reinforcement learning system to manage the betting strategies"
authors = ["jose9806"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.28.1"
pandas = "^2.2.3"
pydantic = "^2.10.6"
webdriver-manager = "^4.0.2"
jsonschema = "^4.23.0"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
xgboost = "^2.1.4"
lightgbm = "^4.6.0"
torch = "^2.6.0"
mlflow = "^2.20.3"
llvmlite = ">=0.39.0"
numba = ">=0.57.0"
shap = "^0.46.0"
optuna = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
